# Detector-de-Doppelganger

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README  README.md  SECURITY.md  SPRINT_ISOLAMENTO_OLLAMA.md  config.py  install.sh  log_sessao.txt  main.py  prompts.json  pyproject.toml  requirements.txt  run.py  run_tests.py  uninstall.sh  verify_model.py
.github/workflows/: ci.yml  release.yml
dev-journey/: 2024-12-31_Session_Summary.md  2025-12-31_Session_Summary.md
dev-journey/01-getting-started/: ARCHITECTURE.md  FOLDER_STRUCTURE.md
dev-templates/: COMMERCIAL_REPORT_TEMPLATE.md  INDEX_TEMPLATE.md  PROJECT_RULES.md  QA_MANUAL_TEMPLATE.md  README.md  RULES_MAP.md  SPRINT_TEMPLATE.md
dev-templates/hooks/: check_acentuacao.py  fix_acentuacao.py
dev-templates/workflows/: WORKFLOW_00_MASTER.md  WORKFLOW_01_QA.md  WORKFLOW_02_AUDITOR.md  WORKFLOW_03_COMPLIANCE.md  WORKFLOW_04_COMMERCIAL.md  WORKFLOW_05_SCORECARD.md  WORKFLOW_06_INTEGRATION.md  WORKFLOW_07_SPRINT.md
docs/: AUDITORIA_EXTERNA.md  IMPLEMENTATION_PLAN.md  Implementation_Plan_v2.md  SCORECARD.md  WORKFLOWS.md
packaging/: build_deb.sh  build_flatpak.sh  com.github.andrebfarias.DetectorDoppelganger.desktop
scripts/: icon_resizer.py  run_agents.sh
src/: checkpoint.py  config_loader.py  detector.py  humanizador.py  icon_resizer.py  installer.py  models.py  naturalness_evaluator.py  output_formatter.py  reprocessor.py  uninstall.py
src/app/: bootstrap.py
src/core/: adversarial.py  app_core.py  checkpoint.py  config_loader.py  detector.py  detector_api.py  detector_local.py  engine.py  humanizador.py  humanizador_api.py  humanizador_local.py  logging_config.py  models.py  naturalness_evaluator.py  output_formatter.py  paraphrase_engine.py  processing_thread.py  processing_thread_v2.py  reprocessor.py
src/core/fine_tuning/: __init__.py  build_balanced_dataset.py  dataset_builder.py  evaluate.py  evaluate_model.py  train_detector.py
src/tests/: conftest.py  test_config.py  test_core.py  test_detector.py  test_engine.py  test_humanizador.py  test_smoke.py  test_utils.py
src/ui/: banner.py  context_menu.py  left_menu.py  main_window.py  splash_screen.py  text_input_frame.py  text_output_frame.py
src/utils/: colors.py  config.py  ctk_theme.json  logger.py
